--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = "^1.4.44"
 argparse = "^1.4.0"
 pytest-asyncio = "^0.20.2"
 pytest-cov = "^4.0.0"
+aiofiles = "^22.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
